[gd_scene load_steps=12 format=3 uid="uid://bx72p4yq4sgjq"]

[ext_resource type="Script" path="res://scene objects/button_w_label.gd" id="1_wucku"]
[ext_resource type="Texture2D" uid="uid://36y3ou5ueogq" path="res://icon.svg" id="2_xllv2"]
[ext_resource type="FontVariation" uid="uid://02bdy1l2b0ae" path="res://resources/fonts/teh_ui_font.tres" id="3_rxb8y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xps0d"]
size = Vector2(32, 32)

[sub_resource type="Theme" id="Theme_tph38"]
Label/colors/font_color = Color(0, 0, 0, 1)
Label/font_sizes/font_size = 10
Label/fonts/font = ExtResource("3_rxb8y")

[sub_resource type="Animation" id="Animation_4kyoc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("icon:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("label:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("icon:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_bbotp"]
resource_name = "click"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("icon:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1.15, 1.15), Vector2(0.9, 0.9), Vector2(1.15, 1.15)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("icon:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.0349066, 0.0349066, 0.0]
}

[sub_resource type="Animation" id="Animation_ip4b5"]
resource_name = "hover"
length = 0.7
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("icon:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-2.23517e-08, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0349066, 0.0523599, -0.0349066, -0.0523599]
}

[sub_resource type="Animation" id="Animation_jqsff"]
resource_name = "in"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("icon:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.17, 1.17), Vector2(1.15, 1.15)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("label:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("label:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -2), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("icon:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_0lhlr"]
resource_name = "out"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("icon:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1.15, 1.15), Vector2(0.98, 0.98), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("label:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("label:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 2)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("icon:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_45e81"]
_data = {
"RESET": SubResource("Animation_4kyoc"),
"click": SubResource("Animation_bbotp"),
"hover": SubResource("Animation_ip4b5"),
"in": SubResource("Animation_jqsff"),
"out": SubResource("Animation_0lhlr")
}

[node name="button_w_label" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 16.0
offset_bottom = 16.0
mouse_filter = 1
script = ExtResource("1_wucku")

[node name="icon" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Icon" type="Sprite2D" parent="icon"]
unique_name_in_owner = true
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_xllv2")

[node name="Area2D" type="Area2D" parent="icon"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="icon/Area2D"]
shape = SubResource("RectangleShape2D_xps0d")

[node name="label" type="Control" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
anchors_preset = 0
mouse_filter = 1

[node name="ColorRect" type="ColorRect" parent="label"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -28.0
offset_top = 19.0
offset_right = 28.0
offset_bottom = 30.0
mouse_filter = 1
color = Color(0.93, 0.851415, 0.5673, 1)
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="label/ColorRect"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 56.0
offset_bottom = 11.0
mouse_filter = 1
theme = SubResource("Theme_tph38")
text = "buttonB"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_45e81")
}

[connection signal="mouse_entered" from="icon/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="icon/Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
